Some initial support for Java 9.